# ogmp_server

./: CMakeLists.txt  COPYRIGHT  README.md  Windows build instructions.txt
include/: client.hpp  client_manager.hpp  config.hpp  connection.hpp  connection_manager.hpp  header.hpp  log.hpp  reply.hpp  request.hpp  request_handler.hpp  request_parser.hpp  server.hpp  shared.hpp
misc/: CMakeLists.txt  config.ini  index.html  run_server.sh  start_server.bat  start_server.sh  users.html
src/: CMakeLists.txt  client.cpp  client_manager.cpp  config.cpp  connection.cpp  connection_manager.cpp  log.cpp  main.cpp  mime_types.cpp  reply.cpp  request_handler.cpp  request_parser.cpp  server.cpp
